# xpresso-gke-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  test.py  test2.py
app/: .dockerignore  Dockerfile  README.md  bench.py  docker-compose.yaml  main.py  requirements-dev.txt  requirements-migrations.txt  requirements.txt  run-local.py
app/app/: config.py  dependencies.py  encoder.py  main.py  requests.py  responses.py
app/app/db/: connection.py
app/app/db/migrations/: run.py
app/app/db/migrations/versions/: 20220215_01_initial_schema.sql
app/app/db/queries/: tables.py
app/app/db/repositories/: articles.py  comments.py  exceptions.py  feed.py  followers.py  profiles.py  tags.py  users.py
app/app/db/repositories/sql/articles/: add_comment.sql  create.sql  create_article.sql  delete.sql  delete_article.sql  (+11 more)
app/app/models/: common.py  conversions.py
app/app/models/domain/: articles.py  comments.py  profiles.py  users.py
app/app/models/schemas/: articles.py  auth.py  comments.py  configs.py  jwt.py  profiles.py  tags.py  users.py  utils.py
app/app/routes/: __init__.py  article.py  articles.py  auth.py  comments.py  feed.py  follow.py  health.py  login.py  profile.py  tags.py  user.py  users.py  utils.py
app/app/services/: auth.py  user.py
app/migrations/: run.py
app/migrations/versions/: 20220215_01_initial_schema.sql
app/scripts/: run-postgres-in-docker.sh
app/tests/: app.py  conftest.py  hasher.py  test_health.py
app/tests/integration/: conftest.py  test_articles.py  test_comments.py  test_following.py  test_health.py  test_login.py  test_profile.py  test_user.py  test_users.py
app/tests/integration/fixtures/: client.py  db.py  repo.py  repos.py  services.py
app/tests/integration/repositories/: test_users.py
app/tests/unit/: conftest.py  test_auth_service.py  test_health.py
app/tests/unit/services/: test_auth_service.py
infra/: Pulumi.yaml  README.md  cloudsql.ts  cluster.ts  config.ts  db.ts  edgedb.ts  iam.ts  index.ts  package-lock.json  package.json  tsconfig.json
(+13 files in other folders)
