[tool.poetry]
name = "app"
version = "0.0.0"
description = "Pods vs. Gunicorn"
authors = ["Adrian Garcia Badaracco <1755071+adriangb@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
xpresso = "^0.41.1"
gunicorn = "^20.1.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
